# Sequential_Fish

./: FishSeq_small_fish_prep.py  README.md  __main__.py  default_pipeline_parameters.py  pipeline_parameters.py  pyproject.toml  requirements.txt
analysis/: __init__.py  _models.py  analysis_parameters.py  colocalisation.py  density.py  distributions.py  main.py  pipeline_metrics.py  post_processing.py  utils.py
analysis/colocalisation_model/: colocalisation_model.aux  colocalisation_model.fdb_latexmk  colocalisation_model.fls  colocalisation_model.tex
chromatic_abberrations/: __init__.py  calibration.py  correction.py  launch_calibration.py  widgets.py
customtypes/: __init__.py  data.py  napari.py
pipeline/: __init__.py  detection.py  drift.py  input.py  quantification.py  runner.py  segmentation.py  washout.py
pipeline/testing/: chromatic_abberations.ipynb  test_widgets.py
src/Sequential_Fish/: __init__.py  __main__.py  _pipeline_scripts.py  default_analysis_parameters.py  pipeline_parameters.py  settings.py  types.py
src/Sequential_Fish/analysis/: Custom_graph.ipynb  __init__.py  _models.py  analysis_parameters.py  colocalisation.py  (+6 more)
status/: __init__.py  cache.py  gui.py  open_status.py  parameters.py  pipeline_parameters.py  update.py
testing_notebooks/: N_colocalisation.ipynb  chromatic_abberration_testing.ipynb  distribution.ipynb  graphs.ipynb  pairwise_colocalisation.ipynb  segmentation.ipynb  testing.ipynb  update_tables.ipynb
tools/: __init__.py  _detection.py  quantification.py  utils.py
viewer/: main.py  testing.ipynb  utils.py  widgets.py
(+61 files in other folders)
